# SGVR_obstacle_avoidance_towr_ws

./: .gitignore  README.md
src/obstacle_avoidance_ifopt/: README.md
src/obstacle_avoidance_ifopt/ifopt_core/include/ifopt/: solver.h
src/obstacle_avoidance_ifopt/ifopt_ipopt/include/ifopt/: ipopt_solver.h
src/obstacle_avoidance_ifopt/ifopt_ipopt/src/: ipopt_solver.cc
src/obstacle_avoidance_towr/: .gitignore  README.md
src/obstacle_avoidance_towr/test_grid_map/: CMakeLists.txt  package.xml
src/obstacle_avoidance_towr/test_grid_map/src/: test_grid_map_node.cpp
src/obstacle_avoidance_towr/towr/: .gitignore  CMakeLists.txt  package.xml
src/obstacle_avoidance_towr/towr/include/towr/: nlp_formulation.h  parameters.h
src/obstacle_avoidance_towr/towr/include/towr/collision/: collision_checker.h
src/obstacle_avoidance_towr/towr/include/towr/constraints/: range_of_motion_constraint.h  time_discretization_constraint.h
src/obstacle_avoidance_towr/towr/include/towr/costs/: collision_cost.h
src/obstacle_avoidance_towr/towr/include/towr/initialization/: gait_generator.h  quadruped_gait_generator.h
src/obstacle_avoidance_towr/towr/include/towr/kinematics/: hyq.urdf  hyqleg_inverse_kinematics.h  inverse_kinematics_hyq4.h  kinematics_hyq4.h
src/obstacle_avoidance_towr/towr/include/towr/models/examples/: hyq_model.h
src/obstacle_avoidance_towr/towr/include/towr/terrain/: edge.h  grid_map.h  height_map.h
src/obstacle_avoidance_towr/towr/include/towr/terrain/examples/: height_map_examples.h
src/obstacle_avoidance_towr/towr/include/towr/variables/: euler_converter.h  node_spline.h  nodes_variables_phase_based.h  polynomial.h  spline.h
src/obstacle_avoidance_towr/towr/launch/: towr.launch
src/obstacle_avoidance_towr/towr/src/: PerlinNoise.cc  collision_checker.cc  collision_cost.cc  gait_generator.cc  grid_map.cc  height_map.cc  height_map_examples.cc  hyqleg_inverse_kinematics.cc  inverse_kinematics_hyq4.cc  kinematics_hyq4.cc  nlp_formulation.cc  node_cost.cc  node_spline.cc  nodes_variables.cc  nodes_variables_phase_based.cc  parameters.cc  polynomial.cc  quadruped_gait_generator.cc  spline.cc  time_discretization_constraint.cc
src/obstacle_avoidance_towr/towr/test/: hopper_example.cc  hyq_example.cc
src/obstacle_avoidance_towr/towr/test/experiment/: get_statistic.py  make_header.py  merge_csv.py
src/obstacle_avoidance_towr/towr_ros/: CMakeLists.txt  package.xml
src/obstacle_avoidance_towr/towr_ros/config/: map.yaml
src/obstacle_avoidance_towr/towr_ros/include/towr_ros/: rviz_obs_sphere_publisher.h  towr_ros_interface.h  towr_user_interface.h
src/obstacle_avoidance_towr/towr_ros/launch/: towr_nodes.launch
src/obstacle_avoidance_towr/towr_ros/msg/: TowrCommand.msg
src/obstacle_avoidance_towr/towr_ros/rviz/: xpp_towr.rviz
src/obstacle_avoidance_towr/towr_ros/src/: rviz_obs_sphere_publisher.cc  towr_ros_app.cc  towr_ros_interface.cc  towr_user_interface.cc
src/obstacle_avoidance_xpp/robots/xpp_hyq/: CMakeLists.txt
src/obstacle_avoidance_xpp/robots/xpp_hyq/launch/: biped.launch  hyq.launch  monoped.launch
src/obstacle_avoidance_xpp/robots/xpp_hyq/src/: hyqleg_inverse_kinematics.cc
src/obstacle_avoidance_xpp/robots/xpp_quadrotor/launch/: quadrotor.launch
src/obstacle_avoidance_xpp/xpp_msgs/: CMakeLists.txt
src/obstacle_avoidance_xpp/xpp_msgs/include/xpp_msgs/: topic_names.h
src/obstacle_avoidance_xpp/xpp_msgs/msg/: SphereObstacle.msg
src/obstacle_avoidance_xpp/xpp_vis/include/xpp_vis/: cartesian_joint_converter.h
src/obstacle_avoidance_xpp/xpp_vis/src/: cartesian_joint_converter.cc
